--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= render 'layouts/navigation' %>
     <%= yield :head %>
 
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
@@ -21,7 +21,6 @@
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload", "media": "all" %>
 
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-
   </head>
 
   <body>
