--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,5 +8,12 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+// Bootstrap
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+// Variables
+@import "base/variables";
+
+// Partials - main css files
+@import "partials/layout/*";
