--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,6 @@
 @import "base/variables";
 
 // Partials - main css files
+@import "partials/*";
+@import "partials/layout/*";
 @import "partials/layout/navigation";
