--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,9 @@
 // Variables
 @import "base/variables";
 
+// Default styles
+@import "base/default";
+
 // Partials - main css files
 @import "partials/*";
 @import "partials/layout/*";
