Update the navigation bar - Add login, signup, logout and edit profile links on the navigation bar - Split _navigation.scss code into partials - Create responsive directory inside the stylesheets directory and add CSS. - Add CSS to tweak navigation bar style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,19 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload", "media": "all" %>
 
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
+
   </head>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
   <body>
     <%= render 'layouts/navigation' %>
     <%= yield %>
+    
   </body>
 </html>
