--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,5 @@
 @import "partials/*";
 @import "partials/layout/*";
 @import "partials/layout/navigation";
+// Media queries for a responsive design
+@import "responsive/*";
