- Add the bootstrap layout to the home page - Add CSS to make home page layout's stylistic and responsive design changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,4 @@
 @import "partials/layout/navigation";
 // Media queries for a responsive design
 @import "responsive/*";
+@import "partials/home_page";
