--- a/app/assets/stylesheets/responsive/mobile.scss
+++ b/app/assets/stylesheets/responsive/mobile.scss
@@ -1,4 +1,7 @@
 @media screen and (max-width: 767px) {
+  #side-menu {
+    display: none !important;
+  }
     .pc-menu {
       display: none !important;
     }
