--- a/app/views/layouts/navigation/_collapsible_elements.html.erb
+++ b/app/views/layouts/navigation/_collapsible_elements.html.erb
@@ -1,16 +1,14 @@
-<!-- Collect the nav links, forms, and other content for toggling -->
-<div class="collapse navbar-collapse navbar-right" id="navbar-collapsible-content">
-  <ul class="nav navbar-nav ">
+<div class="collapse navbar-collapse" id="navbar-collapsible-content">
+  <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
       <li class="dropdown pc-menu">
-        <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#">
+        <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
           <span id="user-name"><%= current_user.name %></span>
           <span class="caret"></span>
         </a>
-
         <ul class="dropdown-menu" role="menu">
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-          <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to 'Logout', destroy_user_session_path, method: :get %></li>
         </ul>
       </li>
 
@@ -18,12 +16,12 @@
         <%= link_to 'Edit Profile', edit_user_registration_path %>
       </li>
       <li class="mobile-menu">
-        <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+        <%= link_to 'Logout', destroy_user_session_path, method: :get %>
       </li>
 
-    <% else # user not signed it %>
-      <li ><%= link_to 'Login', login_path %></li>
-      <li ><%= link_to 'Signup', signup_path %></li>
-    <% end # if user is signed it %>
+    <% else %>
+      <li><%= link_to 'Login', login_path %></li>
+      <li><%= link_to 'Signup', signup_path %></li>
+    <% end %>
   </ul>
-</div><!-- navbar-collapse -->
+</div>
