--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
   <div class="row">
     <div id="side-menu"  class="col-sm-3">
-    </div><!-- side-menu -->
+    </div>
 
     <div id="main-content" class="col-sm-9">
-    </div><!-- main-content -->
+      <%= render @posts %>
+    </div>
 
-  </div><!-- row -->
-</div><!-- container -->
+  </div>
+</div>
