--- a/app/views/layouts/navigation/_collapsible_elements.html.erb
+++ b/app/views/layouts/navigation/_collapsible_elements.html.erb
@@ -2,13 +2,14 @@
   <ul class="nav navbar-nav navbar-right">
     <% if user_signed_in? %>
       <li class="dropdown pc-menu">
-        <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        <a id="user-settings" class="dropdown-toggle" href="#" role="button"
+           data-bs-toggle="dropdown" aria-expanded="false">
           <span id="user-name"><%= current_user.name %></span>
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu" role="menu">
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-          <li><%= link_to 'Logout', destroy_user_session_path, method: :get %></li>
+          <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %></li>
         </ul>
       </li>
 
@@ -16,9 +17,8 @@
         <%= link_to 'Edit Profile', edit_user_registration_path %>
       </li>
       <li class="mobile-menu">
-        <%= link_to 'Logout', destroy_user_session_path, method: :get %>
+        <%= link_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %>
       </li>
-
     <% else %>
       <li><%= link_to 'Login', login_path %></li>
       <li><%= link_to 'Signup', signup_path %></li>
