--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div class="col-sm-3 single-post-card" id="post-<%= post.id %> %>>
+<div class="col-sm-3 single-post-card" id="post-<%= post.id %>">
   <div class="card">
     <div class="card-body">
       <h4 class="post-text">
@@ -12,3 +12,4 @@
       </div>
     </div>
   </div>
+</div>
