Add a popup window to show a full post's content - Add bootstrap's modal component to show full post's content - Render the modal inside the home page's template - Add js to fill the modal with post's content and show it - Add CSS to style the modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,10 @@
  * Consider organizing styles into separate files for maintainability.
  */
 // Bootstrap
-@import "bootstrap";
+
+@import "bootstrap/scss/bootstrap";
+
+
 
 // Variables
 @import "base/variables";
@@ -18,9 +21,13 @@
 @import "base/default";
 
 // Partials - main css files
-@import "partials/*";
-@import "partials/layout/*";
 @import "partials/layout/navigation";
 // Media queries for a responsive design
-@import "responsive/*";
+@import "responsive/desktop";
+@import "responsive/mobile";
 @import "partials/home_page";
+@import "partials/posts/modal";
+@import "partials/posts/home_page";
+@import "partials/signup";
+@import "partials/posts";
+
