--- a/app/assets/stylesheets/responsive/mobile.scss
+++ b/app/assets/stylesheets/responsive/mobile.scss
@@ -2,14 +2,17 @@
   #side-menu {
     display: none !important;
   }
-    .pc-menu {
-      display: none !important;
-    }
+
+  .pc-menu {
+    display: none !important;
   }
-  @media screen and (max-width: 1000px) {
-  .solid-color-mode, .border-color-mode {
+}
+
+@media screen and (max-width: 1000px) {
+  .solid-color-mode,
+  .border-color-mode {
     .post-text {
-      font-size: 16px;  
+      font-size: 16px;
     }
   }
 }
