--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,17 +1,33 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="row">
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <%= link_to 'collabfield', root_path, class: 'navbar-brand' %>
 
-      <!-- Elements visible all the time -->
-      <div class="col-sm-7">
-        <%= render 'layouts/navigation/header' %>
-      </div><!-- col-sm-7 -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapsible-content" aria-controls="navbar-collapsible-content" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <!-- Elements collapses on smaller devices -->
-      <div class="col-sm-5">
-        <%= render 'layouts/navigation/collapsible_elements' %>
-      </div><!-- col-sm-5 -->
-
-    </div><!-- row -->
-  </div><!-- container -->
-</nav>
+    <div class="collapse navbar-collapse" id="navbar-collapsible-content">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <% if user_signed_in? %>
+          <li class="nav-item dropdown">
+            <a id="user-settings" class="nav-link dropdown-toggle" href="#" role="button"
+               data-bs-toggle="dropdown" aria-expanded="false">
+              <%= current_user.name %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-settings">
+              <li><%= link_to 'Edit Profile', edit_user_registration_path, class: "dropdown-item" %></li>
+              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "dropdown-item" %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Login', login_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Signup', signup_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+</div>
