--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="col-sm-3 single-post-card" id="post-<%= post.id %>">
   <div class="card">
-    <div class="card-body">
+    <div class="card-block">
       <h4 class="post-text">
         <%= truncate(post.title, :length => 60) %>
       </h4>
@@ -11,5 +11,5 @@
         <%= link_to "I'm interested", post_path(post.id), class: 'interested' %>
       </div>
     </div>
-  </div>
-</div>
+  </div><!-- card -->
+</div><!-- col-sm-3 -->
