--- a/app/assets/stylesheets/partials/home_page.scss
+++ b/app/assets/stylesheets/partials/home_page.scss
@@ -2,7 +2,8 @@
   background: white;
   min-height: 800px;
   margin: 0;
-  padding: 10px 0 0 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #side-menu {
