--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
 <%= stylesheet_link_tag "application", "data-turbo-track": "reload", "media": "all" %>
 
 <%= javascript_include_tag "application", type: "module", "data-turbo-track": "reload" %>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <%= render 'layouts/navigation' %>
